[gd_scene load_steps=2 format=3 uid="uid://bxw3y8j5k2mqh"]

[ext_resource type="Script" path="res://scripts/login_page.gd" id="1_h8w3y"]

[node name="LoginPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h8w3y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CHESS GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Thesis Project"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TimerSettings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TimerLabel" type="Label" parent="VBoxContainer/TimerSettings"]
layout_mode = 2
text = "Time Per Player (minutes)"
horizontal_alignment = 1

[node name="TimerOptions" type="HBoxContainer" parent="VBoxContainer/TimerSettings"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1

[node name="NoTimerButton" type="Button" parent="VBoxContainer/TimerSettings/TimerOptions"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = null
text = "None"

[node name="Timer5Button" type="Button" parent="VBoxContainer/TimerSettings/TimerOptions"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
toggle_mode = true
button_group = null
text = "5"

[node name="Timer10Button" type="Button" parent="VBoxContainer/TimerSettings/TimerOptions"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
toggle_mode = true
button_group = null
text = "10"

[node name="Timer15Button" type="Button" parent="VBoxContainer/TimerSettings/TimerOptions"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
toggle_mode = true
button_group = null
text = "15"

[node name="Timer30Button" type="Button" parent="VBoxContainer/TimerSettings/TimerOptions"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
toggle_mode = true
button_group = null
text = "30"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "PLAY"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
